{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 30,
  "lineage": "5eb99eb5-ee3f-f4cb-c0e2-8fad662d1f16",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:137390111914:internet-gateway/igw-044d4b283c5b9f8a5",
            "id": "igw-044d4b283c5b9f8a5",
            "owner_id": "137390111914",
            "tags": {
              "Name": "sean-portfolio-igw"
            },
            "tags_all": {
              "Name": "sean-portfolio-igw"
            },
            "vpc_id": "vpc-0bb15c8f193d48da3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:137390111914:route-table/rtb-060f78279cda9c253",
            "id": "rtb-060f78279cda9c253",
            "owner_id": "137390111914",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-044d4b283c5b9f8a5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sean-portfolio-public-rt"
            },
            "tags_all": {
              "Name": "sean-portfolio-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bb15c8f193d48da3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f56de4abee2dcf44",
            "route_table_id": "rtb-060f78279cda9c253",
            "subnet_id": "subnet-0d8fdb930dcbf3ebc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04bc12a919f1c487e",
            "route_table_id": "rtb-060f78279cda9c253",
            "subnet_id": "subnet-0ff24c494e81f0a0d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:137390111914:security-group/sg-0e990b6a9e4d92ffc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e990b6a9e4d92ffc",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "sean-portfolio-rds-sg",
            "name_prefix": "",
            "owner_id": "137390111914",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sean-portfolio-rds-sg"
            },
            "tags_all": {
              "Name": "sean-portfolio-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bb15c8f193d48da3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:137390111914:subnet/subnet-04a9b553fe8a930bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a9b553fe8a930bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "137390111914",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sean-portfolio-private-0"
            },
            "tags_all": {
              "Name": "sean-portfolio-private-0"
            },
            "vpc_id": "vpc-0bb15c8f193d48da3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:137390111914:subnet/subnet-02862583fdb07b1a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02862583fdb07b1a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "137390111914",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sean-portfolio-private-1"
            },
            "tags_all": {
              "Name": "sean-portfolio-private-1"
            },
            "vpc_id": "vpc-0bb15c8f193d48da3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:137390111914:subnet/subnet-0d8fdb930dcbf3ebc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d8fdb930dcbf3ebc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "137390111914",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sean-portfolio-public-0"
            },
            "tags_all": {
              "Name": "sean-portfolio-public-0"
            },
            "vpc_id": "vpc-0bb15c8f193d48da3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:137390111914:subnet/subnet-0ff24c494e81f0a0d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff24c494e81f0a0d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "137390111914",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sean-portfolio-public-1"
            },
            "tags_all": {
              "Name": "sean-portfolio-public-1"
            },
            "vpc_id": "vpc-0bb15c8f193d48da3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:137390111914:vpc/vpc-0bb15c8f193d48da3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0eff7066304a08b98",
            "default_route_table_id": "rtb-0faa19127b3f47a4b",
            "default_security_group_id": "sg-07ea320b6227723bb",
            "dhcp_options_id": "dopt-072340e4fea74379d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bb15c8f193d48da3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0faa19127b3f47a4b",
            "owner_id": "137390111914",
            "tags": {
              "Name": "sean-portfolio-vpc"
            },
            "tags_all": {
              "Name": "sean-portfolio-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}